--- a/indexx.html
+++ b/indexx.html
@@ -77,14 +77,40 @@
 
       <hr>
 
-      <footer>
-        <p>&copy; Company 2015</p>
-      </footer>
+     
+          <nav class="navbar navbar-inverse navbar-bottom " role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Meet point</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <form class="navbar-form navbar-right" role="form">
+    <div class="checkbox">
+    <label class="text-primary"><input  type="checkbox" value="">Help</label>
+    </div>
+    <div class="checkbox">
+      <label class="text-primary"><input type="checkbox" value="">entertainment</label>
+    </div>
+
+            <button type="submit" class="btn btn-success">Accept</button>
+          </form>
+        </div><!--/.navbar-collapse -->
+      </div>
+    </nav>
+     
     </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
         <script src="js/vendor/bootstrap.min.js"></script>
 
         <script src="js/main.js"></script>
+
+
     </body>
 </html>
