--- a/home.html
+++ b/home.html
@@ -230,54 +230,62 @@
     </nav>
 
     <!-- Fin Mapa -->
-<!-- Modal -->
-    <div class="modal fade" id="myModalNorm" tabindex="-1" role="dialog"
-        aria-labelledby="myModalLabel" aria-hidden="true">
-       <div class="modal-dialog">
-           <div class="modal-content">
-               <!-- Modal Header -->
-               <div class="modal-header">
-                   <button type="button" class="close"
-                      data-dismiss="modal">
-                          <span aria-hidden="true">&times;</span>
-                          <span class="sr-only">Close</span>
-                   </button>
-                   <h4 class="modal-title" id="myModalLabel">
-                       New event
-                   </h4>
-               </div>
-               
-               <!-- Modal Body -->
-               <div class="modal-body">
-                   <form role="form">
-                     <div class="form-group">
-                       <label for="exampleInputEmail1">Name of group</label>
-                         <input type="email" class="form-control" id="name_group" placeholder="e.g. Soccer Match 19:00"/>
-                     </div>
-                     <div class="form-group">
-                       <label for="exampleInputPassword1">Member Limit</label>
-                         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="e.g 12s"/>
-                     </div>
-                     <div class="checkbox">
-                       <label>
-                           <input type="checkbox"/> Visible location
-                       </label>
-                     </div>
-                   </form>
-               </div>
-               
-               <!-- Modal Footer -->
-               <div class="modal-footer">
-                   <button type="button" class="btn btn-default"
-                           data-dismiss="modal">
-                               Close
-                   </button>
-                   <button type="button" class="btn btn-primary">
-                       Save changes
-                   </button>
-               </div>
-           </div>
-       </div>
+    <!-- Modal -->
+    <div class="modal fade" id="myModalNorm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+    <div class="modal-content">
+    <!-- Modal Header -->
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">
+            <span aria-hidden="true">&times;</span>
+            <span class="sr-only">Close</span>
+        </button>
+        <h4 class="modal-title" id="myModalLabel">
+            New event
+        </h4>
+    </div>
+    <!-- Modal Body -->
+    <div class="modal-body">
+    <form role="form">
+        <div class="form-group">
+            <label for="exampleInputEmail1">Name of group</label>
+            <input type="text" class="form-control" id="name_group" placeholder="e.g. Soccer Match 19:00"/>
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Member Limit</label>
+            <input type="text" class="form-control" id="limit" placeholder="e.g 12s"/>
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Chat Link</label>
+            <input type="text" class="form-control" id="link" placeholder="e.g http://fb..."/>
+        </div>
+        <select name="categoria">
+            <option value="social">Social</option>
+            <option value="entertaiment">Entertaiment</option>
+            <option value="emergency">Emergency</option>
+            <option value="sports">Sports</option>
+            <option value="business">Business</option>
+        </select>
+        <div class="checkbox">
+            <label>
+                <input type="checkbox"/> Visible location
+            </label>
+        </div>
+    </form>
+    </div>
+
+    <!-- Modal Footer -->
+    <div class="modal-footer">
+    <button type="button" class="btn btn-default"
+    data-dismiss="modal">
+    Close
+    </button>
+    <button type="button" class="btn btn-primary">
+    Save changes
+    </button>
+    </div>
+    </div>
+    </div>
     </div>
 
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
